// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router-sqle-ee render route sqle index page 1`] = `
<body>
  <div>
    <div>
      null
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route custom-create 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="ruleManager"
      >
        <div>
          createCustomRule
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route custom-update 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="ruleManager"
      >
        <div>
          updateCustomRule
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route global-create 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="ruleManager"
      >
        <div>
          globalRuleTemplateCreate
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route global-detail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div>
        globalRuleTemplateDetail
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route global-import 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="ruleManager"
      >
        <div>
          globalRuleTemplateImport
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route global-update 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="ruleManager"
      >
        <div>
          globalRuleTemplateUpdate
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route reportStatistics 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div>
        reportStatistics
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route rule 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div>
        rule
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ce render route ruleManager 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="ruleManager"
      >
        <div>
          ruleTemplateManagement
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ee render route knowledge 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="knowledge"
      >
        <div>
          knowledgeIndex
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ee render route knowledge refined 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="knowledge"
      >
        <div>
          knowledgeRefinedResults
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle global router render sqle router when version is ee render route ruleKnowledge 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div>
        ruleKnowledge
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render DataSourceComparison 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          dataSourceComparison
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render operationRecord 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          operationRecord
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route dashboard 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          dashboard
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route pluginAuditList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="pluginAudit"
        >
          <div>
            pluginAuditList
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route progress render progressDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="progress"
        >
          <div>
            progressDetail
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route progress render progressUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="progress"
        >
          <div>
            progressUpdate
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route projectOverview 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          projectOverview
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="ruleTemplate"
        >
          <div>
            ruleTemplate
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate create 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="ruleTemplate"
        >
          <div>
            ruleTemplateCreate
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate import 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="ruleTemplate"
        >
          <div>
            ruleTemplateImport
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplate list 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="ruleTemplate"
        >
          <div>
            ruleTemplate
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplateDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="ruleTemplate"
        >
          <div>
            ruleTemplateDetail
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route ruleTemplate render route ruleTemplateUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="ruleTemplate"
        >
          <div>
            ruleTemplateUpdate
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route createSqlOptimization 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlAudit"
        >
          <div>
            sqlAuditCreateOptimization
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route optimizationResult 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlAudit"
        >
          <div>
            sqlOptimizationResult
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route sqlAuditCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlAudit"
        >
          <div>
            sqlAuditCreate
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route sqlAuditDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlAudit"
        >
          <div>
            sqlAuditDetail
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlAudit render route sqlAuditList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlAudit"
        >
          <div>
            sqlAuditList
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlInsights 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          sqlInsights
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlManagement render sqlManagement 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagement"
        >
          <div>
            SqlManagement
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlManagementConf render route SqlManagementConfAnalyze 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagementConf"
        >
          <div>
            SqlManagementConfAnalyze
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlManagementConf render route auditPlanDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagementConf"
        >
          <div>
            SqlManagementConfDetail
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlManagementConf render route create 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagementConf"
        >
          <div>
            CreateSqlManagementConf
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlManagementConf render route list 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagementConf"
        >
          <div>
            SqlManagementConfList
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route sqlManagementConf render route update 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagementConf"
        >
          <div>
            UpdateSqlManagementConf
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route workflow render SQLFileStatementOverview 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <div>
            workflowSqlFileStatementOverview
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route workflow render route createSqlExecWorkflow 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <div>
            createSqlExecWorkflow
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route workflow render route list 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <div>
            sqlExecWorkflowList
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render route workflow render route workflowDetail 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <div>
            workflowDetail
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render sqlManagementException 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          sqlManagementException
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ce render whitelist 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div>
          Whitelist
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ee render SqlManagementAnalyze 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlManagement"
        >
          <div>
            SqlManagementAnalyze
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-sqle-ee render sqle project detail router render sqle project detail router when version is ee render route workflowAnalyze 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="availabilityZoneWrapper"
    >
      <div
        data-test-parent-id="sqleProjectDetail"
      >
        <div
          data-test-parent-id="sqlExecWorkflow"
        >
          <div>
            workflowAnalyze
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
